# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  test.k  testing_temp.cpp  toy  toy.cpp
